--- a/react-front-end/src/components/certifications/certification.css
+++ b/react-front-end/src/components/certifications/certification.css
@@ -1,5 +1,5 @@
 .certification-container {
-  width: 90%;
+  width: 100%;
   margin-bottom: 1em;
 }
 
