--- a/react-front-end/src/components/developers/DeveloperDetail.css
+++ b/react-front-end/src/components/developers/DeveloperDetail.css
@@ -29,7 +29,7 @@
 }
 
 .dev-project-section {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -39,7 +39,7 @@
   margin-bottom: 1em;
 }
 .certification-section {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -49,7 +49,7 @@
 }
 
 .dev-project-header {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
